# LegendOfNora

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-macos-arm64.yml
assets/music/: .gitignore
src/: CMakeLists.txt  main.cpp
src/assets/: CMakeLists.txt  asset_paths.cpp  asset_paths.hpp  floating_bridge.cpp  floating_bridge.hpp  ground.cpp  ground.hpp  level_music.cpp  level_music.hpp  spritesheet.cpp  spritesheet.hpp
src/book/: CMakeLists.txt  book.cpp  book.hpp  book_spawner.cpp  book_spawner.hpp
src/entities/: CMakeLists.txt  angry_chimp.cpp  angry_chimp.hpp  angry_chimp_spawner.cpp  angry_chimp_spawner.hpp  gorilla.cpp  gorilla.hpp  sliding_chimp.cpp  sliding_chimp.hpp  sliding_chimp_spawner.cpp  sliding_chimp_spawner.hpp
src/levels/: CMakeLists.txt  firstlevel.cpp  firstlevel.hpp  secondlevel.cpp  secondlevel.hpp
src/metadata/: metadata.hpp
src/player/: CMakeLists.txt  nora.cpp  nora.hpp  player_jump.cpp  player_jump.hpp
src/scenes/: CMakeLists.txt  scene.cpp  scene.hpp  scene_data.hpp
src/titlescreens/: CMakeLists.txt  title_screen.cpp  title_screen.hpp
